tests/unit_tests/mesh/snapshots/unit__unit_tests__mesh__procedural__basic_uniform_tet_mesh.snap
---
source: tests/unit_tests/mesh/procedural.rs
expression: mesh
---
Mesh {
    vertices: [
        [
            0.0,
            0.0,
            0.0,
        ],
        [
            1.0,
            0.0,
            0.0,
        ],
        [
            0.0,
            1.0,
            0.0,
        ],
        [
            1.0,
            1.0,
            0.0,
        ],
        [
            0.0,
            0.0,
            1.0,
        ],
        [
            1.0,
            0.0,
            1.0,
        ],
        [
            0.0,
            1.0,
            1.0,
        ],
        [
            1.0,
            1.0,
            1.0,
        ],
        [
            0.5,
            0.5,
            0.5,
        ],
    ],
    connectivity: [
        Tet4Connectivity(
            [
                4,
                6,
                2,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                4,
                2,
                0,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                1,
                3,
                7,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                1,
                7,
                5,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                4,
                5,
                1,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                4,
                1,
                0,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                2,
                3,
                7,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                2,
                7,
                6,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                2,
                3,
                1,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                2,
                1,
                0,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                4,
                5,
                7,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                4,
                7,
                6,
                8,
            ],
        ),
    ],
}
