tests/unit_tests/mesh/snapshots/unit__unit_tests__mesh__procedural__mesh_1.snap
---
source: tests/unit_tests/mesh/procedural.rs
expression: mesh
---
Mesh {
    vertices: [
        [
            0.0,
            0.0,
            0.0,
        ],
        [
            1.0,
            0.0,
            0.0,
        ],
        [
            0.0,
            1.0,
            0.0,
        ],
        [
            1.0,
            1.0,
            0.0,
        ],
        [
            0.0,
            0.0,
            1.0,
        ],
        [
            1.0,
            0.0,
            1.0,
        ],
        [
            0.0,
            1.0,
            1.0,
        ],
        [
            1.0,
            1.0,
            1.0,
        ],
        [
            0.5,
            0.5,
            0.5,
        ],
    ],
    connectivity: [
        Tet4Connectivity(
            [
                0,
                2,
                6,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                0,
                6,
                4,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                5,
                7,
                3,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                5,
                3,
                1,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                4,
                5,
                1,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                4,
                1,
                0,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                2,
                3,
                7,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                2,
                7,
                6,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                0,
                1,
                3,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                0,
                3,
                2,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                6,
                7,
                5,
                8,
            ],
        ),
        Tet4Connectivity(
            [
                6,
                5,
                4,
                8,
            ],
        ),
    ],
}
