tests/unit_tests/mesh/snapshots/unit__unit_tests__mesh__procedural__mesh_2.snap
---
source: tests/unit_tests/mesh/procedural.rs
expression: mesh
---
Mesh {
    vertices: [
        [
            0.0,
            0.0,
            0.0,
        ],
        [
            0.5,
            0.0,
            0.0,
        ],
        [
            1.0,
            0.0,
            0.0,
        ],
        [
            0.0,
            0.5,
            0.0,
        ],
        [
            0.5,
            0.5,
            0.0,
        ],
        [
            1.0,
            0.5,
            0.0,
        ],
        [
            0.0,
            1.0,
            0.0,
        ],
        [
            0.5,
            1.0,
            0.0,
        ],
        [
            1.0,
            1.0,
            0.0,
        ],
        [
            0.0,
            0.0,
            0.5,
        ],
        [
            0.5,
            0.0,
            0.5,
        ],
        [
            1.0,
            0.0,
            0.5,
        ],
        [
            0.0,
            0.5,
            0.5,
        ],
        [
            0.5,
            0.5,
            0.5,
        ],
        [
            1.0,
            0.5,
            0.5,
        ],
        [
            0.0,
            1.0,
            0.5,
        ],
        [
            0.5,
            1.0,
            0.5,
        ],
        [
            1.0,
            1.0,
            0.5,
        ],
        [
            0.0,
            0.0,
            1.0,
        ],
        [
            0.5,
            0.0,
            1.0,
        ],
        [
            1.0,
            0.0,
            1.0,
        ],
        [
            0.0,
            0.5,
            1.0,
        ],
        [
            0.5,
            0.5,
            1.0,
        ],
        [
            1.0,
            0.5,
            1.0,
        ],
        [
            0.0,
            1.0,
            1.0,
        ],
        [
            0.5,
            1.0,
            1.0,
        ],
        [
            1.0,
            1.0,
            1.0,
        ],
        [
            0.25,
            0.25,
            0.25,
        ],
        [
            0.75,
            0.25,
            0.25,
        ],
        [
            0.25,
            0.75,
            0.25,
        ],
        [
            0.75,
            0.75,
            0.25,
        ],
        [
            0.25,
            0.25,
            0.75,
        ],
        [
            0.75,
            0.25,
            0.75,
        ],
        [
            0.25,
            0.75,
            0.75,
        ],
        [
            0.75,
            0.75,
            0.75,
        ],
    ],
    connectivity: [
        Tet4Connectivity(
            [
                27,
                28,
                1,
                4,
            ],
        ),
        Tet4Connectivity(
            [
                27,
                28,
                4,
                13,
            ],
        ),
        Tet4Connectivity(
            [
                27,
                28,
                13,
                10,
            ],
        ),
        Tet4Connectivity(
            [
                27,
                28,
                10,
                1,
            ],
        ),
        Tet4Connectivity(
            [
                9,
                12,
                3,
                27,
            ],
        ),
        Tet4Connectivity(
            [
                9,
                3,
                0,
                27,
            ],
        ),
        Tet4Connectivity(
            [
                27,
                29,
                3,
                4,
            ],
        ),
        Tet4Connectivity(
            [
                27,
                29,
                4,
                13,
            ],
        ),
        Tet4Connectivity(
            [
                27,
                29,
                13,
                12,
            ],
        ),
        Tet4Connectivity(
            [
                27,
                29,
                12,
                3,
            ],
        ),
        Tet4Connectivity(
            [
                9,
                10,
                1,
                27,
            ],
        ),
        Tet4Connectivity(
            [
                9,
                1,
                0,
                27,
            ],
        ),
        Tet4Connectivity(
            [
                27,
                31,
                9,
                10,
            ],
        ),
        Tet4Connectivity(
            [
                27,
                31,
                10,
                13,
            ],
        ),
        Tet4Connectivity(
            [
                27,
                31,
                13,
                12,
            ],
        ),
        Tet4Connectivity(
            [
                27,
                31,
                12,
                9,
            ],
        ),
        Tet4Connectivity(
            [
                3,
                4,
                1,
                27,
            ],
        ),
        Tet4Connectivity(
            [
                3,
                1,
                0,
                27,
            ],
        ),
        Tet4Connectivity(
            [
                2,
                5,
                11,
                28,
            ],
        ),
        Tet4Connectivity(
            [
                5,
                14,
                11,
                28,
            ],
        ),
        Tet4Connectivity(
            [
                28,
                30,
                4,
                5,
            ],
        ),
        Tet4Connectivity(
            [
                28,
                30,
                5,
                14,
            ],
        ),
        Tet4Connectivity(
            [
                28,
                30,
                14,
                13,
            ],
        ),
        Tet4Connectivity(
            [
                28,
                30,
                13,
                4,
            ],
        ),
        Tet4Connectivity(
            [
                10,
                11,
                1,
                28,
            ],
        ),
        Tet4Connectivity(
            [
                11,
                2,
                1,
                28,
            ],
        ),
        Tet4Connectivity(
            [
                28,
                32,
                10,
                11,
            ],
        ),
        Tet4Connectivity(
            [
                28,
                32,
                11,
                14,
            ],
        ),
        Tet4Connectivity(
            [
                28,
                32,
                14,
                13,
            ],
        ),
        Tet4Connectivity(
            [
                28,
                32,
                13,
                10,
            ],
        ),
        Tet4Connectivity(
            [
                4,
                5,
                1,
                28,
            ],
        ),
        Tet4Connectivity(
            [
                5,
                2,
                1,
                28,
            ],
        ),
        Tet4Connectivity(
            [
                29,
                30,
                4,
                7,
            ],
        ),
        Tet4Connectivity(
            [
                29,
                30,
                7,
                16,
            ],
        ),
        Tet4Connectivity(
            [
                29,
                30,
                16,
                13,
            ],
        ),
        Tet4Connectivity(
            [
                29,
                30,
                13,
                4,
            ],
        ),
        Tet4Connectivity(
            [
                12,
                15,
                3,
                29,
            ],
        ),
        Tet4Connectivity(
            [
                15,
                6,
                3,
                29,
            ],
        ),
        Tet4Connectivity(
            [
                6,
                7,
                15,
                29,
            ],
        ),
        Tet4Connectivity(
            [
                7,
                16,
                15,
                29,
            ],
        ),
        Tet4Connectivity(
            [
                29,
                33,
                12,
                13,
            ],
        ),
        Tet4Connectivity(
            [
                29,
                33,
                13,
                16,
            ],
        ),
        Tet4Connectivity(
            [
                29,
                33,
                16,
                15,
            ],
        ),
        Tet4Connectivity(
            [
                29,
                33,
                15,
                12,
            ],
        ),
        Tet4Connectivity(
            [
                6,
                7,
                3,
                29,
            ],
        ),
        Tet4Connectivity(
            [
                7,
                4,
                3,
                29,
            ],
        ),
        Tet4Connectivity(
            [
                5,
                8,
                17,
                30,
            ],
        ),
        Tet4Connectivity(
            [
                5,
                17,
                14,
                30,
            ],
        ),
        Tet4Connectivity(
            [
                7,
                8,
                17,
                30,
            ],
        ),
        Tet4Connectivity(
            [
                7,
                17,
                16,
                30,
            ],
        ),
        Tet4Connectivity(
            [
                30,
                34,
                13,
                14,
            ],
        ),
        Tet4Connectivity(
            [
                30,
                34,
                14,
                17,
            ],
        ),
        Tet4Connectivity(
            [
                30,
                34,
                17,
                16,
            ],
        ),
        Tet4Connectivity(
            [
                30,
                34,
                16,
                13,
            ],
        ),
        Tet4Connectivity(
            [
                7,
                8,
                5,
                30,
            ],
        ),
        Tet4Connectivity(
            [
                7,
                5,
                4,
                30,
            ],
        ),
        Tet4Connectivity(
            [
                31,
                32,
                10,
                13,
            ],
        ),
        Tet4Connectivity(
            [
                31,
                32,
                13,
                22,
            ],
        ),
        Tet4Connectivity(
            [
                31,
                32,
                22,
                19,
            ],
        ),
        Tet4Connectivity(
            [
                31,
                32,
                19,
                10,
            ],
        ),
        Tet4Connectivity(
            [
                18,
                21,
                9,
                31,
            ],
        ),
        Tet4Connectivity(
            [
                21,
                12,
                9,
                31,
            ],
        ),
        Tet4Connectivity(
            [
                31,
                33,
                12,
                13,
            ],
        ),
        Tet4Connectivity(
            [
                31,
                33,
                13,
                22,
            ],
        ),
        Tet4Connectivity(
            [
                31,
                33,
                22,
                21,
            ],
        ),
        Tet4Connectivity(
            [
                31,
                33,
                21,
                12,
            ],
        ),
        Tet4Connectivity(
            [
                18,
                19,
                9,
                31,
            ],
        ),
        Tet4Connectivity(
            [
                19,
                10,
                9,
                31,
            ],
        ),
        Tet4Connectivity(
            [
                18,
                19,
                21,
                31,
            ],
        ),
        Tet4Connectivity(
            [
                19,
                22,
                21,
                31,
            ],
        ),
        Tet4Connectivity(
            [
                11,
                14,
                23,
                32,
            ],
        ),
        Tet4Connectivity(
            [
                11,
                23,
                20,
                32,
            ],
        ),
        Tet4Connectivity(
            [
                32,
                34,
                13,
                14,
            ],
        ),
        Tet4Connectivity(
            [
                32,
                34,
                14,
                23,
            ],
        ),
        Tet4Connectivity(
            [
                32,
                34,
                23,
                22,
            ],
        ),
        Tet4Connectivity(
            [
                32,
                34,
                22,
                13,
            ],
        ),
        Tet4Connectivity(
            [
                19,
                20,
                11,
                32,
            ],
        ),
        Tet4Connectivity(
            [
                19,
                11,
                10,
                32,
            ],
        ),
        Tet4Connectivity(
            [
                19,
                20,
                23,
                32,
            ],
        ),
        Tet4Connectivity(
            [
                19,
                23,
                22,
                32,
            ],
        ),
        Tet4Connectivity(
            [
                33,
                34,
                13,
                16,
            ],
        ),
        Tet4Connectivity(
            [
                33,
                34,
                16,
                25,
            ],
        ),
        Tet4Connectivity(
            [
                33,
                34,
                25,
                22,
            ],
        ),
        Tet4Connectivity(
            [
                33,
                34,
                22,
                13,
            ],
        ),
        Tet4Connectivity(
            [
                21,
                24,
                15,
                33,
            ],
        ),
        Tet4Connectivity(
            [
                21,
                15,
                12,
                33,
            ],
        ),
        Tet4Connectivity(
            [
                15,
                16,
                25,
                33,
            ],
        ),
        Tet4Connectivity(
            [
                15,
                25,
                24,
                33,
            ],
        ),
        Tet4Connectivity(
            [
                21,
                22,
                25,
                33,
            ],
        ),
        Tet4Connectivity(
            [
                21,
                25,
                24,
                33,
            ],
        ),
        Tet4Connectivity(
            [
                14,
                17,
                23,
                34,
            ],
        ),
        Tet4Connectivity(
            [
                17,
                26,
                23,
                34,
            ],
        ),
        Tet4Connectivity(
            [
                16,
                17,
                25,
                34,
            ],
        ),
        Tet4Connectivity(
            [
                17,
                26,
                25,
                34,
            ],
        ),
        Tet4Connectivity(
            [
                22,
                23,
                25,
                34,
            ],
        ),
        Tet4Connectivity(
            [
                23,
                26,
                25,
                34,
            ],
        ),
    ],
}
